--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -12,6 +12,7 @@ main .hero {
   position: relative;
   padding: 32px;
   min-height: 300px;
+  background: rgba(20,76,125,0.8);
 }
 
 main .hero h1 {
